--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,16 @@ embedded-hal = "0.2.3"
 nb = "0.1.2"
 ufmt = "0.1.0"
 heapless = { version = "0.5.3", features = ["serde"] }
-log = { version = "0.4", default-features = false }
+log = { version = "0.4", default-features = false, optional = true }
 mqttrs = { version = "0.3.0", default-features = false }
 bytes = { version = "0.5.4", default-features = false }
 embedded-nal = { git = "https://github.com/thejpster/embedded-nal" }
 no-std-net = "0.3.0"
 
 [dev-dependencies]
-void = "1.0.2"
+void = { version = "1.0.2", default-features = false }
 env_logger = "0.7.1"
+
+[features]
+
+logging = ["log"]
