--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,21 +18,24 @@ name = "mqttrust"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-embedded-hal = "0.2.3"
-nb = "0.1.2"
-ufmt = "0.1.0"
-heapless = { version = "0.5.3", features = ["serde"] }
-log = { version = "0.4", default-features = false, optional = true }
-bytes = { version = "0.5.4", default-features = false }
+embedded-hal = "^0.2"
+nb = "^0.1"
+ufmt = "^0.1"
+heapless = { version = "^0.5", features = ["serde"] }
+log = { version = "^0.4", default-features = false, optional = true }
+bytes = { version = "^0.5", default-features = false }
+no-std-net = "^0.3"
 embedded-nal = { git = "https://github.com/thejpster/embedded-nal" }
-no-std-net = "0.3.0"
-mqttrs = { path = "../mqttrs", default-features = false }
+mqttrs = { path = "../mqttrs", default-features = false, features = ["alloc"] }
 # mqttrs = { version = "0.3.0", default-features = false }
 
 [dev-dependencies]
 void = { version = "1.0.2", default-features = false }
 env_logger = "0.7.1"
 
-[features]
+[patch.'https://github.com/thejpster/embedded-nal']
+embedded-nal = { path = "../embedded-nal" }
 
+
+[features]
 logging = ["log"]
