--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ maintenance = { status = "actively-developed" }
 embedded-hal = "^0.2"
 nb = "^0.1"
 ufmt = "^0.1"
-heapless = { version = "^0.5", features = ["serde"] }
+heapless = { version = "^0.5.5", features = ["serde"] }
 log = { version = "^0.4", default-features = false, optional = true }
 bytes = { version = "^0.5", default-features = false }
 no-std-net = "^0.3"
@@ -39,4 +39,8 @@ embedded-nal = { path = "../embedded-nal" }
 mqttrs = { path = "../mqttrs" }
 
 [features]
+default = ["persistence"]
+
 logging = ["log"]
+persistence = []
+alloc = []
