Revert to functioning receive fn, and lock mqttrs on git branch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ heapless = { version = "^0.5.5", features = ["serde"] }
 log = { version = "^0.4", default-features = false, optional = true }
 no-std-net = "^0.3"
 embedded-nal = { git = "https://github.com/MathiasKoch/embedded-nal", branch = "factbird_mini" }
-mqttrs = { path = "../mqttrs", default-features = false }
+mqttrs = { git = "https://github.com/MathiasKoch/mqttrs", branch = "wip/alloc-free-encode", default-features = false }
 
 [dev-dependencies]
 void = { version = "1.0.2", default-features = false }
