--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ maintenance = { status = "actively-developed" }
 embedded-hal = "^0.2"
 nb = "^0.1"
 heapless = { version = "^0.5.5", features = ["serde"] }
-no-std-net = "^0.3"
+no-std-net = "*"
 embedded-nal = { git = "https://github.com/MathiasKoch/embedded-nal", branch = "factbird_mini" }
 mqttrs = { git = "https://github.com/MathiasKoch/mqttrs", branch = "wip/alloc-free-encode", default-features = false }
 
