Lock defmt to version 0.1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ no-std-net = "0.4.0"
 embedded-nal = { git = "https://github.com/MathiasKoch/embedded-nal", branch = "factbird-mini-1.0" }
 mqttrs = { git = "https://github.com/MathiasKoch/mqttrs", branch = "wip/alloc-free-encode", default-features = false }
 
-defmt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }
+defmt = { version = "^0.1" }
 
 [dev-dependencies]
 dns-lookup = "1.0.3"
