--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,12 @@ name = "mqttrust"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-embedded-hal = { git = "https://github.com/MathiasKoch/embedded-hal", branch = "feature/alternative-storage" }
+embedded-hal = { version = "1.0.0-alpha.4" }
 nb = "^1"
 heapless = { version = "^0.5.5", features = ["serde"] }
 no-std-net = "0.4.0"
-embedded-nal = { git = "https://github.com/MathiasKoch/embedded-nal", branch = "factbird-mini-1.0" }
+embedded-nal = { git = "https://github.com/BlackbirdHQ/embedded-nal", branch = "factbird-mini-1.0" }
 mqttrs = { version = "0.4.0", default-features = false }
-
 
 defmt = { version = "^0.1" }
 
