--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,26 +18,53 @@ name = "mqttrust"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
+defmt = { version = "^0.1" }
 embedded-hal = { version = "1.0.0-alpha.4" }
 embedded-nal = "0.2.0"
-nb = "^1"
 heapless = { version = "^0.5.5", features = ["serde"] }
-no-std-net = "0.4.0"
 mqttrs = { version = "0.4.0", default-features = false }
+nb = "^1"
+no-std-net = "0.4.0"
 
-defmt = { version = "^0.1" }
+# A dependency for the "std"-enabled example.
+dns-lookup = { version = "1.0.3", optional = true }
 
 [dev-dependencies]
-dns-lookup = "1.0.3"
-std-embedded-nal = "0.0.1"
+cortex-m = "0.6.3"
+cortex-m-rt = "0.6.12"
+cortex-m-rtic = "0.5.5"
+embedded-hal = "1.0.0-alpha.4"
+embedded-nal = "0.2.0"
+heapless = { version = "^0.5", features = ["serde"] }
+nb = { version = "1.0.0" }
+panic-semihosting = "0.5.0"
+chrono = { version = "0.4.11", default-features = false }
+defmt-rtt = { version = "0.1" }
+defmt = "0.1.3"
 
+[dev-dependencies.atat]
+version = "0.6.0"
+features = ["derive"]
+
+[dev-dependencies.stm32l4xx-hal]
+git = "https://github.com/MathiasKoch/stm32l4xx-hal.git"
+branch = "enhancement/prepare-embedded-hal-1.0"
+features = ["stm32l4x5", "rt"]
+
+[dev-dependencies.ublox-cellular-rs]
+git = "https://github.com/BlackbirdHQ/ublox-cellular-rs"
+branch = "keep-connected-socket-intact"
 
 [features]
 default = []
-
 defmt-default = []
 defmt-trace = []
 defmt-debug = []
 defmt-info = []
 defmt-warn = []
 defmt-error = []
+std = ["dns-lookup"]
+
+[[example]]
+name = "linux"
+required-features = ["std"]
