--- a/.github/workflows/grcov.yml
+++ b/.github/workflows/grcov.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
-          target: thumbv7m-none-eabi
+          target: thumbv7em-none-eabihf
           override: true
 
       - name: Install grcov
