--- a/mqttrust/Cargo.toml
+++ b/mqttrust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mqttrust"
-version = "0.2.1-alpha.0"
+version = "0.2.0"
 authors = ["Mathias Koch <mk@blackbird.online>"]
 description = "MQTT Client "
 readme = "../README.md"
@@ -19,4 +19,4 @@ maintenance = { status = "actively-developed" }
 
 [dependencies]
 heapless = { version = "^0.7", features = ["serde"] }
-mqttrs = { version = "0.4.1", default-features = false }
+defmt = "^0.2"
