--- a/mqttrust/Cargo.toml
+++ b/mqttrust/Cargo.toml
@@ -18,10 +18,13 @@ name = "mqttrust"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-heapless = { version = "^0.7", features = ["serde"] }
+heapless = { version = "^0.7" }
 defmt = { version = "^0.2", optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
 
 [features]
 default = []
 
 defmt-impl = ["defmt", "heapless/defmt-impl"]
+
+derive = ["serde", "heapless/serde"]
