--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mqttrust_core"
-version = "0.2.0"
+version = "0.3.1-alpha0"
 authors = ["Mathias Koch <mk@blackbird.online>"]
 description = "MQTT Client "
 readme = "../README.md"
@@ -18,14 +18,13 @@ name = "mqttrust_core"
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-embedded-hal = { version = "1.0.0-alpha.4" }
+embedded-hal = { version = "=1.0.0-alpha.4" }
 embedded-nal = "0.6.0"
 embedded-time = "0.11.0"
 nb = "^1"
 heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
-mqttrust = { version = "^0.2.0", path = "../mqttrust" }
-# bbqueue = "0.4.12"
-bbqueue = { git = "https://github.com/mriise/bbqueue" }
+mqttrust = { version = "^0.3.1-alpha0", path = "../mqttrust" }
+bbqueue = "0.5"
 
 log = { version = "^0.4", default-features = false, optional = true }
 defmt = { version = "^0.2", optional = true }
