--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mqttrust_core"
-version = "0.3.1-alpha0"
+version = "0.4.0"
 authors = ["Mathias Koch <mk@blackbird.online>"]
 description = "MQTT Client "
 readme = "../README.md"
