--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -23,7 +23,7 @@ embedded-nal = "0.6.0"
 embedded-time = "0.11.0"
 nb = "^1"
 heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
-mqttrust = { version = "^0.3.1-alpha0", path = "../mqttrust" }
+mqttrust = { version = "^0.4.0", path = "../mqttrust" }
 bbqueue = "0.5"
 
 log = { version = "^0.4", default-features = false, optional = true }
