--- a/mqttrust/Cargo.toml
+++ b/mqttrust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mqttrust"
-version = "0.4.1-alpha.0"
+version = "0.4.1"
 authors = ["Mathias Koch <mk@blackbird.online>"]
 description = "MQTT Client "
 readme = "../README.md"
