--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -14,6 +14,14 @@ documentation = "https://docs.rs/mqttrust_core"
 [lib]
 name = "mqttrust_core"
 
+[[example]]
+name = "echo"
+required-features = ["x86", "log"]
+
+[[example]]
+name = "aws_device_advisor"
+required-features = ["x86", "log"]
+
 [badges]
 maintenance = { status = "actively-developed" }
 
@@ -22,7 +30,7 @@ embedded-hal = { version = "=1.0.0-alpha.4" }
 embedded-nal = "0.6.0"
 embedded-time = "0.11.0"
 nb = "^1"
-heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
+heapless = { version = "^0.7", features = ["serde"] }
 mqttrust = { version = "^0.4.1-alpha.0", path = "../mqttrust" }
 bbqueue = "0.5"
 
@@ -30,11 +38,14 @@ log = { version = "^0.4", default-features = false, optional = true }
 defmt = { version = "^0.2", optional = true }
 
 [dev-dependencies]
+native-tls = { version = "^0.2" }
 dns-lookup = "1.0.3"
-
+env_logger = "0.9.0"
 
 [features]
 default = []
+
+x86 = ["heapless/x86-sync-pool"]
 
 defmt-impl = ["defmt", "mqttrust/defmt-impl", "heapless/defmt-impl"]
 
