--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -16,11 +16,11 @@ name = "mqttrust_core"
 
 [[example]]
 name = "echo"
-required-features = ["x86", "log"]
+required-features = ["log"]
 
 [[example]]
 name = "aws_device_advisor"
-required-features = ["x86", "log"]
+required-features = ["log"]
 
 [badges]
 maintenance = { status = "actively-developed" }
@@ -29,7 +29,7 @@ maintenance = { status = "actively-developed" }
 embedded-hal = { version = "=1.0.0-alpha.6" }
 embedded-nal = "0.6.0"
 nb = "^1"
-heapless = { version = "^0.7", features = ["serde"] }
+heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
 mqttrust = { version = "^0.4.1-alpha.0", path = "../mqttrust" }
 bbqueue = "0.5"
 fugit = { version = "0.3", features = ["defmt"] }
@@ -46,13 +46,6 @@ env_logger = "0.9.0"
 [features]
 default = []
 
-x86 = ["heapless/x86-sync-pool"]
+std = []
 
-defmt-impl = ["defmt", "mqttrust/defmt-impl", "heapless/defmt-impl"]
-
-defmt-default = ["defmt-impl"]
-defmt-trace = ["defmt-impl"]
-defmt-debug = ["defmt-impl"]
-defmt-info = ["defmt-impl"]
-defmt-warn = ["defmt-impl"]
-defmt-error = ["defmt-impl"]
+defmt-impl = ["defmt", "mqttrust/defmt-impl", "heapless/defmt-impl", "fugit/defmt"]
