--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -30,7 +30,7 @@ embedded-hal = { version = "=1.0.0-alpha.6" }
 embedded-nal = "0.6.0"
 nb = "^1"
 heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
-mqttrust = { version = "^0.4.1-alpha.0", path = "../mqttrust" }
+mqttrust = { version = "^0.5.0", path = "../mqttrust" }
 bbqueue = "0.5"
 fugit = { version = "0.3", features = ["defmt"] }
 fugit-timer = "0.1.2"
