--- a/mqttrust_core/Cargo.toml
+++ b/mqttrust_core/Cargo.toml
@@ -32,7 +32,7 @@ nb = "^1"
 heapless = { version = "^0.7", features = ["serde", "x86-sync-pool"] }
 mqttrust = { version = "^0.5.0", path = "../mqttrust" }
 bbqueue = "0.5"
-fugit = { version = "0.3", features = ["defmt"] }
+fugit = { version = "0.3" }
 fugit-timer = "0.1.2"
 
 log = { version = "^0.4", default-features = false, optional = true }
