Remove log feature from docs build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -296,7 +296,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: doc
-          args: --verbose --no-deps --features "log"
+          args: --verbose --no-deps
 
       # - name: Finalize documentation
       #   run: |
